parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    BREAK
    COLON
    DOUBLEMARK
    EXPONENT
    MARK
    POINT
    READ
    RESERVED

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM OBRACKET statement_list CBRACKET
Rule 2     program -> PROGRAM OBRACKET CBRACKET
Rule 3     statement_list -> statement
Rule 4     statement_list -> statement_list statement
Rule 5     statement -> sent_assign
Rule 6     statement -> write_statement
Rule 7     statement -> var_declaration_statement
Rule 8     statement -> if_statement
Rule 9     statement -> iteration_statement
Rule 10    do_while_statement -> DO OBRACKET statement_list CBRACKET UNTIL LPAREN sent_assign RPAREN
Rule 11    for_statement -> FOR LPAREN sent_assign sent_assign RPAREN OBRACKET statement_list CBRACKET
Rule 12    while_statement -> WHILE LPAREN sent_assign RPAREN OBRACKET statement_list CBRACKET
Rule 13    iteration_statement -> for_statement
Rule 14    iteration_statement -> while_statement
Rule 15    iteration_statement -> do_while_statement
Rule 16    if_statement -> IF LPAREN sent_assign RPAREN OBRACKET statement_list CBRACKET FI
Rule 17    if_statement -> IF LPAREN sent_assign RPAREN OBRACKET statement_list CBRACKET ELSE OBRACKET statement_list CBRACKET FI
Rule 18    var_declaration_statement -> type_declaration ID COMA var_declaration_statement
Rule 19    var_declaration_statement -> ID COMA var_declaration_statement
Rule 20    var_declaration_statement -> ID SEMICOLON
Rule 21    var_declaration_statement -> type_declaration ID SEMICOLON
Rule 22    type_declaration -> INT
Rule 23    type_declaration -> CHAR
Rule 24    type_declaration -> FLOAT
Rule 25    type_declaration -> BOOL
Rule 26    write_statement -> WRITE ID SEMICOLON
Rule 27    sent_assign -> ID EQUAL exp_bool SEMICOLON
Rule 28    sent_assign -> exp_bool SEMICOLON
Rule 29    exp_bool -> exp_bool OR comb
Rule 30    exp_bool -> comb
Rule 31    comb -> comb AND igualdad
Rule 32    comb -> igualdad
Rule 33    igualdad -> igualdad EQUALEQUAL rel
Rule 34    igualdad -> igualdad DIFFEQUAL rel
Rule 35    igualdad -> rel
Rule 36    rel -> expr op_rel expr
Rule 37    rel -> expr
Rule 38    op_rel -> LEESTHAN
Rule 39    op_rel -> MORETHAN
Rule 40    op_rel -> LEESETHAN
Rule 41    op_rel -> MOREETHAN
Rule 42    expr -> expr MINUS term
Rule 43    expr -> expr PLUS term
Rule 44    expr -> term
Rule 45    term -> term TIMES unario
Rule 46    term -> term DIVIDE unario
Rule 47    term -> unario
Rule 48    unario -> NOT unario
Rule 49    unario -> MINUS unario
Rule 50    unario -> factor
Rule 51    factor -> LPAREN RPAREN
Rule 52    factor -> ID
Rule 53    factor -> NUMBER
Rule 54    factor -> DOUBLE
Rule 55    factor -> TRUE
Rule 56    factor -> FALSE

Terminals, with rules where they appear

AND                  : 31
BOOL                 : 25
BREAK                : 
CBRACKET             : 1 2 10 11 12 16 17 17
CHAR                 : 23
COLON                : 
COMA                 : 18 19
DIFFEQUAL            : 34
DIVIDE               : 46
DO                   : 10
DOUBLE               : 54
DOUBLEMARK           : 
ELSE                 : 17
EQUAL                : 27
EQUALEQUAL           : 33
EXPONENT             : 
FALSE                : 56
FI                   : 16 17
FLOAT                : 24
FOR                  : 11
ID                   : 18 19 20 21 26 27 52
IF                   : 16 17
INT                  : 22
LEESETHAN            : 40
LEESTHAN             : 38
LPAREN               : 10 11 12 16 17 51
MARK                 : 
MINUS                : 42 49
MOREETHAN            : 41
MORETHAN             : 39
NOT                  : 48
NUMBER               : 53
OBRACKET             : 1 2 10 11 12 16 17 17
OR                   : 29
PLUS                 : 43
POINT                : 
PROGRAM              : 1 2
READ                 : 
RESERVED             : 
RPAREN               : 10 11 12 16 17 51
SEMICOLON            : 20 21 26 27 28
TIMES                : 45
TRUE                 : 55
UNTIL                : 10
WHILE                : 12
WRITE                : 26
error                : 

Nonterminals, with rules where they appear

comb                 : 29 30 31
do_while_statement   : 15
exp_bool             : 27 28 29
expr                 : 36 36 37 42 43
factor               : 50
for_statement        : 13
if_statement         : 8
igualdad             : 31 32 33 34
iteration_statement  : 9
op_rel               : 36
program              : 0
rel                  : 33 34 35
sent_assign          : 5 10 11 11 12 16 17
statement            : 3 4
statement_list       : 1 4 10 11 12 16 17 17
term                 : 42 43 44 45 46
type_declaration     : 18 21
unario               : 45 46 47 48 49
var_declaration_statement : 7 18 19
while_statement      : 14
write_statement      : 6

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM OBRACKET statement_list CBRACKET
    (2) program -> . PROGRAM OBRACKET CBRACKET

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . OBRACKET statement_list CBRACKET
    (2) program -> PROGRAM . OBRACKET CBRACKET

    OBRACKET        shift and go to state 3


state 3

    (1) program -> PROGRAM OBRACKET . statement_list CBRACKET
    (2) program -> PROGRAM OBRACKET . CBRACKET
    (3) statement_list -> . statement
    (4) statement_list -> . statement_list statement
    (5) statement -> . sent_assign
    (6) statement -> . write_statement
    (7) statement -> . var_declaration_statement
    (8) statement -> . if_statement
    (9) statement -> . iteration_statement
    (27) sent_assign -> . ID EQUAL exp_bool SEMICOLON
    (28) sent_assign -> . exp_bool SEMICOLON
    (26) write_statement -> . WRITE ID SEMICOLON
    (18) var_declaration_statement -> . type_declaration ID COMA var_declaration_statement
    (19) var_declaration_statement -> . ID COMA var_declaration_statement
    (20) var_declaration_statement -> . ID SEMICOLON
    (21) var_declaration_statement -> . type_declaration ID SEMICOLON
    (16) if_statement -> . IF LPAREN sent_assign RPAREN OBRACKET statement_list CBRACKET FI
    (17) if_statement -> . IF LPAREN sent_assign RPAREN OBRACKET statement_list CBRACKET ELSE OBRACKET statement_list CBRACKET FI
    (13) iteration_statement -> . for_statement
    (14) iteration_statement -> . while_statement
    (15) iteration_statement -> . do_while_statement
    (29) exp_bool -> . exp_bool OR comb
    (30) exp_bool -> . comb
    (22) type_declaration -> . INT
    (23) type_declaration -> . CHAR
    (24) type_declaration -> . FLOAT
    (25) type_declaration -> . BOOL
    (11) for_statement -> . FOR LPAREN sent_assign sent_assign RPAREN OBRACKET statement_list CBRACKET
    (12) while_statement -> . WHILE LPAREN sent_assign RPAREN OBRACKET statement_list CBRACKET
    (10) do_while_statement -> . DO OBRACKET statement_list CBRACKET UNTIL LPAREN sent_assign RPAREN
    (31) comb -> . comb AND igualdad
    (32) comb -> . igualdad
    (33) igualdad -> . igualdad EQUALEQUAL rel
    (34) igualdad -> . igualdad DIFFEQUAL rel
    (35) igualdad -> . rel
    (36) rel -> . expr op_rel expr
    (37) rel -> . expr
    (42) expr -> . expr MINUS term
    (43) expr -> . expr PLUS term
    (44) expr -> . term
    (45) term -> . term TIMES unario
    (46) term -> . term DIVIDE unario
    (47) term -> . unario
    (48) unario -> . NOT unario
    (49) unario -> . MINUS unario
    (50) unario -> . factor
    (51) factor -> . LPAREN RPAREN
    (52) factor -> . ID
    (53) factor -> . NUMBER
    (54) factor -> . DOUBLE
    (55) factor -> . TRUE
    (56) factor -> . FALSE

    CBRACKET        shift and go to state 5
    ID              shift and go to state 12
    WRITE           shift and go to state 14
    IF              shift and go to state 16
    INT             shift and go to state 22
    CHAR            shift and go to state 23
    FLOAT           shift and go to state 24
    BOOL            shift and go to state 25
    FOR             shift and go to state 26
    WHILE           shift and go to state 27
    DO              shift and go to state 28
    NOT             shift and go to state 35
    MINUS           shift and go to state 32
    LPAREN          shift and go to state 17
    NUMBER          shift and go to state 37
    DOUBLE          shift and go to state 38
    TRUE            shift and go to state 39
    FALSE           shift and go to state 40

    statement_list                 shift and go to state 4
    statement                      shift and go to state 6
    sent_assign                    shift and go to state 7
    write_statement                shift and go to state 8
    var_declaration_statement      shift and go to state 9
    if_statement                   shift and go to state 10
    iteration_statement            shift and go to state 11
    exp_bool                       shift and go to state 13
    type_declaration               shift and go to state 15
    for_statement                  shift and go to state 18
    while_statement                shift and go to state 19
    do_while_statement             shift and go to state 20
    comb                           shift and go to state 21
    igualdad                       shift and go to state 29
    rel                            shift and go to state 30
    expr                           shift and go to state 31
    term                           shift and go to state 33
    unario                         shift and go to state 34
    factor                         shift and go to state 36

state 4

    (1) program -> PROGRAM OBRACKET statement_list . CBRACKET
    (4) statement_list -> statement_list . statement
    (5) statement -> . sent_assign
    (6) statement -> . write_statement
    (7) statement -> . var_declaration_statement
    (8) statement -> . if_statement
    (9) statement -> . iteration_statement
    (27) sent_assign -> . ID EQUAL exp_bool SEMICOLON
    (28) sent_assign -> . exp_bool SEMICOLON
    (26) write_statement -> . WRITE ID SEMICOLON
    (18) var_declaration_statement -> . type_declaration ID COMA var_declaration_statement
    (19) var_declaration_statement -> . ID COMA var_declaration_statement
    (20) var_declaration_statement -> . ID SEMICOLON
    (21) var_declaration_statement -> . type_declaration ID SEMICOLON
    (16) if_statement -> . IF LPAREN sent_assign RPAREN OBRACKET statement_list CBRACKET FI
    (17) if_statement -> . IF LPAREN sent_assign RPAREN OBRACKET statement_list CBRACKET ELSE OBRACKET statement_list CBRACKET FI
    (13) iteration_statement -> . for_statement
    (14) iteration_statement -> . while_statement
    (15) iteration_statement -> . do_while_statement
    (29) exp_bool -> . exp_bool OR comb
    (30) exp_bool -> . comb
    (22) type_declaration -> . INT
    (23) type_declaration -> . CHAR
    (24) type_declaration -> . FLOAT
    (25) type_declaration -> . BOOL
    (11) for_statement -> . FOR LPAREN sent_assign sent_assign RPAREN OBRACKET statement_list CBRACKET
    (12) while_statement -> . WHILE LPAREN sent_assign RPAREN OBRACKET statement_list CBRACKET
    (10) do_while_statement -> . DO OBRACKET statement_list CBRACKET UNTIL LPAREN sent_assign RPAREN
    (31) comb -> . comb AND igualdad
    (32) comb -> . igualdad
    (33) igualdad -> . igualdad EQUALEQUAL rel
    (34) igualdad -> . igualdad DIFFEQUAL rel
    (35) igualdad -> . rel
    (36) rel -> . expr op_rel expr
    (37) rel -> . expr
    (42) expr -> . expr MINUS term
    (43) expr -> . expr PLUS term
    (44) expr -> . term
    (45) term -> . term TIMES unario
    (46) term -> . term DIVIDE unario
    (47) term -> . unario
    (48) unario -> . NOT unario
    (49) unario -> . MINUS unario
    (50) unario -> . factor
    (51) factor -> . LPAREN RPAREN
    (52) factor -> . ID
    (53) factor -> . NUMBER
    (54) factor -> . DOUBLE
    (55) factor -> . TRUE
    (56) factor -> . FALSE

    CBRACKET        shift and go to state 41
    ID              shift and go to state 12
    WRITE           shift and go to state 14
    IF              shift and go to state 16
    INT             shift and go to state 22
    CHAR            shift and go to state 23
    FLOAT           shift and go to state 24
    BOOL            shift and go to state 25
    FOR             shift and go to state 26
    WHILE           shift and go to state 27
    DO              shift and go to state 28
    NOT             shift and go to state 35
    MINUS           shift and go to state 32
    LPAREN          shift and go to state 17
    NUMBER          shift and go to state 37
    DOUBLE          shift and go to state 38
    TRUE            shift and go to state 39
    FALSE           shift and go to state 40

    statement                      shift and go to state 42
    sent_assign                    shift and go to state 7
    write_statement                shift and go to state 8
    var_declaration_statement      shift and go to state 9
    if_statement                   shift and go to state 10
    iteration_statement            shift and go to state 11
    exp_bool                       shift and go to state 13
    type_declaration               shift and go to state 15
    for_statement                  shift and go to state 18
    while_statement                shift and go to state 19
    do_while_statement             shift and go to state 20
    comb                           shift and go to state 21
    igualdad                       shift and go to state 29
    rel                            shift and go to state 30
    expr                           shift and go to state 31
    term                           shift and go to state 33
    unario                         shift and go to state 34
    factor                         shift and go to state 36

state 5

    (2) program -> PROGRAM OBRACKET CBRACKET .

    $end            reduce using rule 2 (program -> PROGRAM OBRACKET CBRACKET .)


state 6

    (3) statement_list -> statement .

    CBRACKET        reduce using rule 3 (statement_list -> statement .)
    ID              reduce using rule 3 (statement_list -> statement .)
    WRITE           reduce using rule 3 (statement_list -> statement .)
    IF              reduce using rule 3 (statement_list -> statement .)
    INT             reduce using rule 3 (statement_list -> statement .)
    CHAR            reduce using rule 3 (statement_list -> statement .)
    FLOAT           reduce using rule 3 (statement_list -> statement .)
    BOOL            reduce using rule 3 (statement_list -> statement .)
    FOR             reduce using rule 3 (statement_list -> statement .)
    WHILE           reduce using rule 3 (statement_list -> statement .)
    DO              reduce using rule 3 (statement_list -> statement .)
    NOT             reduce using rule 3 (statement_list -> statement .)
    MINUS           reduce using rule 3 (statement_list -> statement .)
    LPAREN          reduce using rule 3 (statement_list -> statement .)
    NUMBER          reduce using rule 3 (statement_list -> statement .)
    DOUBLE          reduce using rule 3 (statement_list -> statement .)
    TRUE            reduce using rule 3 (statement_list -> statement .)
    FALSE           reduce using rule 3 (statement_list -> statement .)


state 7

    (5) statement -> sent_assign .

    CBRACKET        reduce using rule 5 (statement -> sent_assign .)
    ID              reduce using rule 5 (statement -> sent_assign .)
    WRITE           reduce using rule 5 (statement -> sent_assign .)
    IF              reduce using rule 5 (statement -> sent_assign .)
    INT             reduce using rule 5 (statement -> sent_assign .)
    CHAR            reduce using rule 5 (statement -> sent_assign .)
    FLOAT           reduce using rule 5 (statement -> sent_assign .)
    BOOL            reduce using rule 5 (statement -> sent_assign .)
    FOR             reduce using rule 5 (statement -> sent_assign .)
    WHILE           reduce using rule 5 (statement -> sent_assign .)
    DO              reduce using rule 5 (statement -> sent_assign .)
    NOT             reduce using rule 5 (statement -> sent_assign .)
    MINUS           reduce using rule 5 (statement -> sent_assign .)
    LPAREN          reduce using rule 5 (statement -> sent_assign .)
    NUMBER          reduce using rule 5 (statement -> sent_assign .)
    DOUBLE          reduce using rule 5 (statement -> sent_assign .)
    TRUE            reduce using rule 5 (statement -> sent_assign .)
    FALSE           reduce using rule 5 (statement -> sent_assign .)


state 8

    (6) statement -> write_statement .

    CBRACKET        reduce using rule 6 (statement -> write_statement .)
    ID              reduce using rule 6 (statement -> write_statement .)
    WRITE           reduce using rule 6 (statement -> write_statement .)
    IF              reduce using rule 6 (statement -> write_statement .)
    INT             reduce using rule 6 (statement -> write_statement .)
    CHAR            reduce using rule 6 (statement -> write_statement .)
    FLOAT           reduce using rule 6 (statement -> write_statement .)
    BOOL            reduce using rule 6 (statement -> write_statement .)
    FOR             reduce using rule 6 (statement -> write_statement .)
    WHILE           reduce using rule 6 (statement -> write_statement .)
    DO              reduce using rule 6 (statement -> write_statement .)
    NOT             reduce using rule 6 (statement -> write_statement .)
    MINUS           reduce using rule 6 (statement -> write_statement .)
    LPAREN          reduce using rule 6 (statement -> write_statement .)
    NUMBER          reduce using rule 6 (statement -> write_statement .)
    DOUBLE          reduce using rule 6 (statement -> write_statement .)
    TRUE            reduce using rule 6 (statement -> write_statement .)
    FALSE           reduce using rule 6 (statement -> write_statement .)


state 9

    (7) statement -> var_declaration_statement .

    CBRACKET        reduce using rule 7 (statement -> var_declaration_statement .)
    ID              reduce using rule 7 (statement -> var_declaration_statement .)
    WRITE           reduce using rule 7 (statement -> var_declaration_statement .)
    IF              reduce using rule 7 (statement -> var_declaration_statement .)
    INT             reduce using rule 7 (statement -> var_declaration_statement .)
    CHAR            reduce using rule 7 (statement -> var_declaration_statement .)
    FLOAT           reduce using rule 7 (statement -> var_declaration_statement .)
    BOOL            reduce using rule 7 (statement -> var_declaration_statement .)
    FOR             reduce using rule 7 (statement -> var_declaration_statement .)
    WHILE           reduce using rule 7 (statement -> var_declaration_statement .)
    DO              reduce using rule 7 (statement -> var_declaration_statement .)
    NOT             reduce using rule 7 (statement -> var_declaration_statement .)
    MINUS           reduce using rule 7 (statement -> var_declaration_statement .)
    LPAREN          reduce using rule 7 (statement -> var_declaration_statement .)
    NUMBER          reduce using rule 7 (statement -> var_declaration_statement .)
    DOUBLE          reduce using rule 7 (statement -> var_declaration_statement .)
    TRUE            reduce using rule 7 (statement -> var_declaration_statement .)
    FALSE           reduce using rule 7 (statement -> var_declaration_statement .)


state 10

    (8) statement -> if_statement .
